--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-hook-form": "^7.25.0",
     "react-scripts": "^5.0.0"
   },
   "scripts": {
