--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.25.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-scripts": "^5.0.0"
+    "react-scripts": "^5.0.0",
+    "swr": "^1.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
