--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "dependencies": {
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-scripts": "^5.0.0"
+    "react-hook-form": "^7.25.0",
+    "react-router-dom": "^6.2.1",
+    "react-scripts": "^5.0.0",
+    "swr": "^1.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
