--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^6.2.1",
-    "react-scripts": "4.0.2"
+    "react-scripts": "4.0.2",
+    "sass": "^1.49.0"
   },
   "browserslist": {
     "production": [
